--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
-    <h1> This is my first website </h1>
+    <table style="width: 100%">
+        <tr>
+            <th>first name</th>
+            <th>last name</th>
+            <th>Age name</th>
+        </tr>
+        <tr>
+            <td>Jalil</td>
+            <td>ahmed</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>Khalil</td>
+            <td>Ahmed</td>
+            <td>40</td>
+        </tr>
+        <tr>
+            <td>Lorem</td>
+            <td>Ipsum</td>
+            <td>40</td>
+        </tr>
+    </table>
 </body>
 </html>
